--- a/Game/mainwindow.ui
+++ b/Game/mainwindow.ui
@@ -17,8 +17,8 @@
    <widget class="QGraphicsView" name="gameView">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
+      <x>20</x>
+      <y>10</y>
       <width>256</width>
       <height>192</height>
      </rect>
@@ -27,14 +27,14 @@
    <widget class="QPushButton" name="startButton">
     <property name="geometry">
      <rect>
-      <x>700</x>
-      <y>340</y>
+      <x>440</x>
+      <y>160</y>
       <width>84</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
-     <string>START</string>
+     <string>PushButton</string>
     </property>
    </widget>
   </widget>
