--- a/Game/mainwindow.ui
+++ b/Game/mainwindow.ui
@@ -37,6 +37,19 @@
      <string>PushButton</string>
     </property>
    </widget>
+   <widget class="QLabel" name="runningTime">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>60</y>
+      <width>63</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Time</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
