--- a/Game/mainwindow.ui
+++ b/Game/mainwindow.ui
@@ -76,19 +76,6 @@
      <string>Statistics:</string>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="busCount">
-    <property name="geometry">
-     <rect>
-      <x>620</x>
-      <y>120</y>
-      <width>64</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true"/>
-    </property>
-   </widget>
    <widget class="QLabel" name="busesLabel">
     <property name="geometry">
      <rect>
@@ -184,6 +171,32 @@
     </property>
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="busCount">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
+      <y>120</y>
+      <width>63</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="busesAdded">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>140</y>
+      <width>63</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
     </property>
    </widget>
   </widget>
