--- a/Game/data.qrc
+++ b/Game/data.qrc
@@ -4,5 +4,7 @@
         <file>passenger.jpg</file>
         <file>stop.jpg</file>
         <file>fighter.jpg</file>
+        <file>spaceship.jpg</file>
+        <file>heli.jpg</file>
     </qresource>
 </RCC>
