--- a/Game/mainwindow.ui
+++ b/Game/mainwindow.ui
@@ -204,7 +204,33 @@
      <rect>
       <x>460</x>
       <y>370</y>
-      <width>63</width>
+      <width>251</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="secondsLabel">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>410</y>
+      <width>241</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>450</y>
+      <width>291</width>
       <height>20</height>
      </rect>
     </property>
