--- a/Game/dialog.ui
+++ b/Game/dialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>492</width>
-    <height>300</height>
+    <width>544</width>
+    <height>435</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QLabel" name="helicopterLabel">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>110</y>
+     <x>70</x>
+     <y>240</y>
      <width>71</width>
      <height>20</height>
     </rect>
@@ -29,8 +29,8 @@
   <widget class="QLabel" name="jetFighterLabel">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>110</y>
+     <x>210</x>
+     <y>240</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -42,8 +42,8 @@
   <widget class="QLabel" name="spaceShipLabel">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>110</y>
+     <x>360</x>
+     <y>240</y>
      <width>71</width>
      <height>20</height>
     </rect>
@@ -52,11 +52,11 @@
     <string>Spaceship</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
+  <widget class="QLabel" name="selectLabel">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>80</y>
+     <x>50</x>
+     <y>210</y>
      <width>211</width>
      <height>20</height>
     </rect>
@@ -68,8 +68,8 @@
   <widget class="QLabel" name="heliStatsLabel_1">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>210</y>
+     <x>60</x>
+     <y>340</y>
      <width>63</width>
      <height>20</height>
     </rect>
@@ -81,8 +81,8 @@
   <widget class="QLabel" name="heliStatsLabel_2">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>230</y>
+     <x>60</x>
+     <y>360</y>
      <width>91</width>
      <height>20</height>
     </rect>
@@ -94,8 +94,8 @@
   <widget class="QLabel" name="jetStatsLabel_1">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>210</y>
+     <x>200</x>
+     <y>340</y>
      <width>71</width>
      <height>20</height>
     </rect>
@@ -107,8 +107,8 @@
   <widget class="QLabel" name="jetStatsLabel_2">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>230</y>
+     <x>200</x>
+     <y>360</y>
      <width>91</width>
      <height>20</height>
     </rect>
@@ -120,8 +120,8 @@
   <widget class="QLabel" name="spaceStatsLabel_1">
    <property name="geometry">
     <rect>
-     <x>340</x>
-     <y>210</y>
+     <x>350</x>
+     <y>340</y>
      <width>91</width>
      <height>20</height>
     </rect>
@@ -133,8 +133,8 @@
   <widget class="QLabel" name="spaceStatsLabel_2">
    <property name="geometry">
     <rect>
-     <x>340</x>
-     <y>230</y>
+     <x>350</x>
+     <y>360</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -146,72 +146,24 @@
   <widget class="QLabel" name="label_11">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>90</x>
      <y>10</y>
-     <width>51</width>
+     <width>31</width>
      <height>51</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 75 oblique 52pt &quot;Cantarell&quot;;</string>
+    <string notr="true">font: 63 30pt &quot;URW Bookman&quot;;</string>
    </property>
    <property name="text">
-    <string>N</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_12">
-   <property name="geometry">
-    <rect>
-     <x>110</x>
-     <y>10</y>
-     <width>51</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 75 oblique 52pt &quot;Cantarell&quot;;</string>
-   </property>
-   <property name="text">
-    <string>A</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_13">
-   <property name="geometry">
-    <rect>
-     <x>160</x>
-     <y>10</y>
-     <width>61</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 75 oblique 52pt &quot;Cantarell&quot;;</string>
-   </property>
-   <property name="text">
-    <string>M</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_14">
-   <property name="geometry">
-    <rect>
-     <x>220</x>
-     <y>10</y>
-     <width>51</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 75 oblique 52pt &quot;Cantarell&quot;;</string>
-   </property>
-   <property name="text">
-    <string>E</string>
+    <string>L</string>
    </property>
   </widget>
   <widget class="QPushButton" name="jetButton">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>130</y>
+     <x>190</x>
+     <y>260</y>
      <width>101</width>
      <height>71</height>
     </rect>
@@ -228,8 +180,8 @@ background-color: rgb(255, 255, 255);</string>
   <widget class="QPushButton" name="spaceButton">
    <property name="geometry">
     <rect>
-     <x>330</x>
-     <y>130</y>
+     <x>340</x>
+     <y>260</y>
      <width>101</width>
      <height>71</height>
     </rect>
@@ -246,8 +198,8 @@ background-color: rgb(255, 255, 255);</string>
   <widget class="QPushButton" name="heliButton">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>130</y>
+     <x>60</x>
+     <y>260</y>
      <width>101</width>
      <height>71</height>
     </rect>
@@ -258,6 +210,219 @@ background-color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_12">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>10</y>
+     <width>31</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 63 30pt &quot;URW Bookman&quot;;</string>
+   </property>
+   <property name="text">
+    <string>A</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_13">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>10</y>
+     <width>31</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 63 30pt &quot;URW Bookman&quot;;</string>
+   </property>
+   <property name="text">
+    <string>S</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_15">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>10</y>
+     <width>31</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 63 30pt &quot;URW Bookman&quot;;</string>
+   </property>
+   <property name="text">
+    <string>T</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_16">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>10</y>
+     <width>31</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 63 30pt &quot;URW Bookman&quot;;</string>
+   </property>
+   <property name="text">
+    <string>O</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_17">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>10</y>
+     <width>31</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 63 30pt &quot;URW Bookman&quot;;</string>
+   </property>
+   <property name="text">
+    <string>B</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_18">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>10</y>
+     <width>31</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 63 30pt &quot;URW Bookman&quot;;</string>
+   </property>
+   <property name="text">
+    <string>F</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_19">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>10</y>
+     <width>41</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 63 30pt &quot;URW Bookman&quot;;</string>
+   </property>
+   <property name="text">
+    <string>U</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_20">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>10</y>
+     <width>31</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 63 30pt &quot;URW Bookman&quot;;</string>
+   </property>
+   <property name="text">
+    <string>S</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>110</y>
+     <width>151</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Enter player 1 name:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>150</y>
+     <width>141</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Enter player 2 name:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="player1LineEdit">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>110</y>
+     <width>113</width>
+     <height>28</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="player2LineEdit">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>150</y>
+     <width>113</width>
+     <height>28</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="errorNameLabel">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>80</y>
+     <width>221</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>ERROR! Name can't be empty</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="name1Button">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>110</y>
+     <width>31</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>&gt;</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="name2Button">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>150</y>
+     <width>31</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>&gt;</string>
    </property>
   </widget>
  </widget>
