--- a/Game/mainwindow.ui
+++ b/Game/mainwindow.ui
@@ -163,7 +163,7 @@
       <x>460</x>
       <y>170</y>
       <width>241</width>
-      <height>191</height>
+      <height>111</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -262,6 +262,16 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="top10">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>310</y>
+      <width>241</width>
+      <height>121</height>
+     </rect>
     </property>
    </widget>
   </widget>
