--- a/Game/mainwindow.ui
+++ b/Game/mainwindow.ui
@@ -268,10 +268,23 @@
     <property name="geometry">
      <rect>
       <x>460</x>
-      <y>310</y>
+      <y>340</y>
       <width>241</width>
       <height>121</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="top10Label">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>310</y>
+      <width>63</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TOP 10:</string>
     </property>
    </widget>
   </widget>
