--- a/Game/gameoverdialog.ui
+++ b/Game/gameoverdialog.ui
@@ -16,9 +16,9 @@
   <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
-     <x>350</x>
+     <x>290</x>
      <y>100</y>
-     <width>251</width>
+     <width>311</width>
      <height>351</height>
     </rect>
    </property>
@@ -31,14 +31,24 @@
    <widget class="QLabel" name="top10Label">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>130</x>
       <y>10</y>
-      <width>181</width>
+      <width>61</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>Top 10 scores:</string>
+     <string>TOP 10:</string>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="textBrowser">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>40</y>
+      <width>256</width>
+      <height>192</height>
+     </rect>
     </property>
    </widget>
   </widget>
@@ -47,9 +57,12 @@
     <rect>
      <x>30</x>
      <y>20</y>
-     <width>581</width>
-     <height>20</height>
+     <width>481</width>
+     <height>21</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 15pt &quot;Cantarell&quot;;</string>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -59,8 +72,8 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>90</y>
-     <width>311</width>
+     <y>50</y>
+     <width>471</width>
      <height>20</height>
     </rect>
    </property>
@@ -71,7 +84,7 @@
   <widget class="QPushButton" name="restartPushButton">
    <property name="geometry">
     <rect>
-     <x>540</x>
+     <x>520</x>
      <y>20</y>
      <width>84</width>
      <height>28</height>
