Course project PROG3

--- a/Game/mainwindow.ui
+++ b/Game/mainwindow.ui
@@ -235,6 +235,19 @@
      <string>TOP 10:</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>20</y>
+      <width>221</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Destroy 20 buses to win!</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
